<resources>
    <string name="app_name">hackerthon</string>
    <string name="reso">helper</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_account">don\'t have account</string>
    <string name="code">code</string>
    <string name="email">email</string>
    <string name="password_confirmed">password confirmed</string>
    <string name="country">country</string>
    <string name="problem_statement">Problem statement</string>
    <string name="scheme">Scheme</string>
    <string name="promote_ideas">Promote ideas</string>
    <string name="garbage_management_team">Garbage Management Team</string>
    <string name="waste_management_issues">Waste Management Issues</string>
    <string name="send_waste_management_issues_to_the_government">Send waste management issues to the Government</string>
    <string name="write_your_statement_here">write your statement here...</string>
    <string name="send">SENd</string>
    <string name="sell">SELL</string>
    <string name="buy">BUY</string>
    <string name="sell_waste_materials">Sell Waste Materials</string>
    <string name="item_name">Item name</string>
    <string name="where_to_utitlize">Where to utitlize?</string>
    <string name="price">price</string>
    <string name="share_item">share item</string>
    <string name="email_id">Email Id</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="sign_up">sign up</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="log_out">log out</string>
    <string name="create_team">create team</string>
    <string name="organisation_name_team_name">team name</string>
    <string name="motives">Motives</string>
    <string name="achievement">achievement</string>
    <string name="specialized">specialized</string>
    <string name="summit">create</string>
    <string name="waste_management_system">Waste Management System</string>
    <string name="waste_management">Waste Management</string>
    <string name="no_scheme_available">No Scheme Available</string>
    <string name="scheme_">Scheme</string>
    <string name="buy_waste_product">Buy Waste Product</string>
</resources>