<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/but2"
    tools:context=".govern_login">

    <EditText
        android:id="@+id/gle1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"

        android:hint="@string/email_id"
        android:minHeight="15dp"
        android:layout_above="@id/gle2"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="17sp" />


    <EditText
        android:id="@+id/gle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/password"
        android:minHeight="15dp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/gle3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gle2"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:hint="@string/code"
        android:minHeight="15dp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        android:textSize="17sp" />

    <Button
        android:id="@+id/glb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gle3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/glt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"

        android:layout_marginBottom="7dp"
        android:padding="4dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>
